# ohtu_palautusrepo

./: README.md
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/: pyproject.toml
viikko2/src/: index.py  player.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/webcounter/: log.html  output.xml  report.html
viikko4/: pyproject.toml
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/: kauppa.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: example.txt
