[project]
name = "viikko2"
version = "0.1.0"
description = ""
authors = [
    {name = "alexalgrund",email = "alexander.algrund@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cowsay (>=6.1,<7.0)",
    "sqlalchemy (==1.4.54)",
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
